--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Page Not Found 
+        title #{pageTitle} 
         link(rel="stylesheet", href="/css/main.css")
         //template inheritance 
         block styles
@@ -13,7 +13,7 @@ html(lang="en")
             nav.main-header__nav
                 ul.main-header__item-list
                     li.main-header__item
-                        a(href="/") Shop
+                        a(href="/", class=(path === '/' ? 'active' : '')) Shop
                     li.main-header__item
-                        a(href="/admin/add-product") Add Product
+                        a(href="/admin/add-product", class=(path==='/admin/add-product' ? 'active' : '')) Add Product
         block content
