--- a/views/shop.hbs
+++ b/views/shop.hbs
@@ -23,9 +23,10 @@
     <main>
         {{#if hasProducts }}
             <div class="grid">
+                {{#each prods }}
                 <article class="card product-item">
                     <header class="card__header">
-                        <h1 class="product__title">Great Book</h1>
+                        <h1 class="product__title">{{ this.title }}</h1>
                     </header>
                     <div class="card__image">
                         <img src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png" alt="A Book">
@@ -38,6 +39,7 @@
                         <button class="btn">Add to Cart</button>
                     </div>
                 </article>
+                {{/each }}
             </div>
         {{else }}
             <h1>No Products Found</h1>
