--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -1,10 +1,10 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
     <!-- all ejs code is buildt upon exexution -->
-<%- include('includes/navigation.ejs') %>
+<%- include('../includes/navigation.ejs') %>
 
     <main>
         <!-- Now we need if statement adn loop -->
@@ -37,4 +37,4 @@
             <h1> No Products Found</h1>
         <% } %>
     </main>
-    <%- include('includes/end.ejs') %>
+    <%- include('../includes/end.ejs') %>
