--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -13,6 +13,21 @@
                 <input type="text" name="title" id="title">
             </div>
 
+            <div class="form-control">
+                <label for="imageURL">Image URL</label>
+                <input type="text" name="imageURL" id="imageURL">
+            </div>
+
+            <div class="form-control">
+                <label for="price">Prie</label>
+                <input type="number" name="price" id="price">
+            </div>
+
+            <div class="form-control">
+                <label for="description">Description</label>
+                <textarea name="description" id="description" cols="30" rows="5"></textarea>
+            </div>
+
             <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
