--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -20,7 +20,7 @@
 
             <div class="form-control">
                 <label for="price">Prie</label>
-                <input type="number" name="price" id="price">
+                <input type="number" name="price" id="price" step="0.01">
             </div>
 
             <div class="form-control">
