--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -7,5 +7,35 @@
 <%- include('../includes/navigation.ejs') %>
 
     <main>
-
-<%- include('../includes/end.ejs') %>
+        <!-- Now we need if statement adn loop -->
+        <!-- Only if you have products -->
+        <!-- This will check for any prods -->
+        <% if (prods.length > 0) { %>
+        <h1>My Products</h1>
+        <p>List of all the products...</p>
+        <!-- Itterate through all the products -->
+        <% for (let product of prods) { %>
+        <div class="grid">
+            <article class="card product-item">
+                <header class="card__header">
+                    <h1 class="product__title"><%= product.title %></h1>
+                </header>
+                <div class="card__image">
+                    <img src="<%= product.imageURL %>" alt="<%= product.title %>">
+                </div>
+                <div class="card__content">
+                    <h2 class="product__price"><%= product.price %></h2>
+                    <p class="product__description"><%= product.description %></p>
+                </div>
+                <div class="card__actions">
+                    <button class="btn">Edit</button>
+                    <button class="btn">Delete</button>
+                </div>
+            </article>
+            <% } %>
+        </div>
+        <% } else { %>
+            <h1> No Products Found</h1>
+        <% } %>
+    </main>
+    <%- include('../includes/end.ejs') %>
